<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_store"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_cita"
        android:icon="@drawable/ic_message"
        android:title="@string/title_cita" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>