<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tecsup.proyecto.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.tecsup.proyecto.ui.tienda.TiendaFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_tienda" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.tecsup.proyecto.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_cita"
        android:name="com.tecsup.proyecto.ui.cita.CitaFragment"
        android:label="@string/title_cita"
        tools:layout="@layout/fragment_cita" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.tecsup.proyecto.ui.perfil.PerfilFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_perfil" />
</navigation>